--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
             height: 28px;
             top: 3px !important;
             left: 3px;
+            color: #c36100;
+            background-color: white;
+            border: none;
+            font-weight: 800;
         }
 
         @keyframes fade {
             0% {}
 
             100% {
-                opacity: 0;
+                opacity: 0.2;
+                transform: scale(0.5);
             }
         }
     </style>
