--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
         }
 
         .audio {
-            width: 100px;
-            height: 28px;
-            top: 3px !important;
+            position: fixed;
+            top: 3px;
             left: 3px;
-            color: #c36100;
+            color: #cf6800;
             background-color: white;
             border: none;
             font-weight: 800;
@@ -72,9 +71,9 @@
 </head>
 
 <body>
-    <button class="audio">背景音乐</button>
+    <button class="audio"><?xml version="1.0" encoding="UTF-8"?><svg width="25" height="25" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30 34.5C30 32.567 31.567 31 33.5 31H41V34.4C41 36.3882 39.3882 38 37.4 38H33.5C31.567 38 30 36.433 30 34.5Z" fill="none" stroke="#ee830e" stroke-width="4" stroke-linejoin="round"/><path d="M6 38.5C6 36.567 7.567 35 9.5 35H16V38.4C16 40.3882 14.3882 42 12.4 42H9.5C7.567 42 6 40.433 6 38.5Z" fill="none" stroke="#ee830e" stroke-width="4" stroke-linejoin="round"/><path d="M16 18.044V18.044L41 12.125" stroke="#ee830e" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 38V10L41 4V33.6924" stroke="#ee830e" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
     <button class="disorganize operation">随机打乱</button>
-    <button class="advertising operation">重置</button>
+    <button class="advertising operation">看广告</button>
 
     <select class="selectLevel operation">
         <option value="6">第一关</option>
