--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             left: 155px;
         }
 
-        .advertising {
+        .reset {
             left: 280px;
         }
 
@@ -73,7 +73,7 @@
 <body>
     <button class="audio"><?xml version="1.0" encoding="UTF-8"?><svg width="25" height="25" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30 34.5C30 32.567 31.567 31 33.5 31H41V34.4C41 36.3882 39.3882 38 37.4 38H33.5C31.567 38 30 36.433 30 34.5Z" fill="none" stroke="#ee830e" stroke-width="4" stroke-linejoin="round"/><path d="M6 38.5C6 36.567 7.567 35 9.5 35H16V38.4C16 40.3882 14.3882 42 12.4 42H9.5C7.567 42 6 40.433 6 38.5Z" fill="none" stroke="#ee830e" stroke-width="4" stroke-linejoin="round"/><path d="M16 18.044V18.044L41 12.125" stroke="#ee830e" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 38V10L41 4V33.6924" stroke="#ee830e" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
     <button class="disorganize operation">随机打乱</button>
-    <button class="advertising operation">看广告</button>
+    <button class="reset operation">重新开始</button>
 
     <select class="selectLevel operation">
         <option value="6">第一关</option>
@@ -105,7 +105,7 @@
         let spacing = 65;
         const selectLevel = document.querySelector('.selectLevel');
         const disorganize = document.querySelector('.disorganize');
-        const advertising = document.querySelector('.advertising');
+        const reset = document.querySelector('.reset');
         const BGAudio = document.querySelector('.BGAudio');
         const audio = document.querySelector('.audio');
         const audioScore = document.querySelector('.audioScore');
@@ -243,7 +243,7 @@
             });
         });
 
-        advertising.addEventListener('click', () => gameStart(selectLevel.value));
+        reset.addEventListener('click', () => gameStart(selectLevel.value));
 
         let audioThrottling = false;
 
